# SHARD

./: .gitignore  README.md  docker-compose.yml  generate_structure.sh  project_structure.md
shard-core/: CMakeLists.txt  Dockerfile
shard-core/src/: main.cpp
shard-core/src/api/: routes.cpp  routes.hpp
shard-core/src/crypto/: aes_gcm.cpp  aes_gcm.hpp  gf256.cpp  gf256.hpp  secure_mem.hpp  shamir.cpp  shamir.hpp
shard-core/src/network/: node_client.cpp  node_client.hpp
shard-core/src/storage/: db.cpp  db.hpp
shard-node/: Dockerfile  requirements.txt  run_nodes.sh  server.py
shard-ui/: index.html  package-lock.json  package.json
shard-ui/src/: App.jsx  index.css  main.jsx  tokens.css
shard-ui/src/api/: vaultApi.js
shard-ui/src/components/: Badge.jsx  NodeGrid.jsx  ShardVisualizer.jsx  Sidebar.jsx  StatCard.jsx  TopBar.jsx  VaultTable.jsx
shard-ui/src/pages/: CreateSecret.jsx  Dashboard.jsx  LoginPage.jsx  NodeStatus.jsx  UnsealPage.jsx  VaultList.jsx
